--- a/Todo App/index.html
+++ b/Todo App/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Todo App Example</title>
         <script src="https://unpkg.com/lucia@next"></script>
     </head>
     <body>
+        <h1>Lucia Todo Example</h1>
         <div l-state="{ value: '', todo: [] }">
             <input l-model="value" />
             <button @click="todo.push(value)">Create</button>
